--- a/mobow/admin/css/opening.css
+++ b/mobow/admin/css/opening.css
@@ -11,7 +11,7 @@ padding-bottom: 10px;
 #openingFrame {
 border-style: solid;
 border-width: 5px;
-border-color: pink;
+border-color: #ff6699;
 padding-top: 10px;
 overflow: auto;
 width: 430px;
