--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -300,6 +300,11 @@ text-align: left;
   margin-left: 25px;
 }
 
+#forrmimg{
+  width: 120px;
+  margin-left: 25px;
+}
+
 #username{
     width:360px;
 }
