--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -257,6 +257,7 @@ text-align: left;
 #huvudmeny {
   width: 100%; 
   height: auto;
+padding-bottom:10px;
 }
 
 /* Snygga till login-wrapper */
@@ -552,7 +553,7 @@ nav ul li a{
   text-decoration:none;
   color: #5d5d5d;
   font: 18px Arial,sans-serif;
-  padding: 10px 34px 10px;
+  padding: 10px 30px 10px;
   position: relative;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
   z-index:2;
