--- a/mobow/admin/css/opening.css
+++ b/mobow/admin/css/opening.css
@@ -22,6 +22,13 @@ background: #ccc;
 width: 100%;
 }
 
+#postOpeninghours>#comp{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 350px;
+}
+
 #frameOpening li{
 margin-left: 20%;
 margin-right: 20%;
