--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -5,6 +5,13 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
 #969
 #F2F2F2
 */
+
+fieldset {
+padding-bottom: 10px;
+paddin-top: 10px;
+}
+
+
 #passchange {
   display: inline-block;
   text-align: center;
