--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -378,15 +378,21 @@ padding-bottom:10px;
 
 /* ############### name attribute .<name> ############### */
 
+.center{
+    text-align: center;
+}
+
+.error{
+    background-color: #fcc;
+    color: #000;
+    font-weight: bold;
+    display: inline-block;
+    width: 1024px;
+}
+
 /* dölj innehåll */
 .hide{
     display:none;
-}
-
-/* generella inställningar för submit */
-.submit {
-  text-align: center;
-  margin-top: 20px;
 }
 
 .ok{
@@ -397,12 +403,16 @@ padding-bottom:10px;
     width: 1024px;
 }
 
-.error{
-    background-color: #fcc;
-    color: #000;
-    font-weight: bold;
-    display: inline-block;
-    width: 1024px;
+/* generella inställningar för submit */
+.submit {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.upload_pdf{
+  width: 400px;
+  padding-bottom: 10px;
+  margin: 0 auto;
 }
 
 /* ############### tag attribute  ############### */
