--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -314,6 +314,17 @@ text-align: left;
   height: 10px;
 }
 
+#forrmimg{
+  width: 120px;
+  margin-left: 25px;
+}
+
+/* Huvudområde längst upp på sidan */
+#header-wrapper {
+  width: 100%;
+  height: 110px;
+}
+
 /* generella inställningar för huvudmeny */
 #huvudmeny {
   width: 100%; 
@@ -340,12 +351,6 @@ padding-bottom:10px;
   -webkit-border-radius: 10px 10px 10px 10px;
 }
 
-/* Huvudområde längst upp på sidan */
-#header-wrapper {
-  width: 100%;
-  height: 110px;
-}
-
 /* Huvudområdet i mitten av sidan */
 #main-wrapper {
   width: 100%;
@@ -367,9 +372,13 @@ padding-bottom:10px;
   margin-left: 25px;
 }
 
-#forrmimg{
-  width: 120px;
-  margin-left: 25px;
+#upload_form input[type="text"],
+#upload_form input[type="date"],
+#upload_form select,
+#upload_form input[type="file"]
+{
+  margin: 0 auto;
+  width: 75%;
 }
 
 #username{
@@ -411,7 +420,7 @@ padding-bottom:10px;
 
 .upload_pdf{
   width: 400px;
-  padding-bottom: 10px;
+  padding: 10px;
   margin: 0 auto;
 }
 
