--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -63,7 +63,7 @@ paddin-top: 10px;
   width: 1024px; 
   min-height: 800px;
   height: 100%;
-  background: #ccc; 
+  background: #fcfcfc; 
   display: inline-block; 
 }
 
@@ -112,8 +112,8 @@ background: #efefef;
 }
 
 #listframe { 
-  width: 63%; 
-  min-height: 800px;
+  width: 400px;
+  min-height: 400px;
   height: 100%;
   border-style: solid;
   border-width: 5px;
@@ -121,6 +121,9 @@ background: #efefef;
   background: #CCC; 
   display: inline-block; 
   text-align: center;
+  position: relative;
+  left: -50%;
+  float: left;
 }
 
 #invoicelistframe { 
@@ -421,8 +424,11 @@ padding-bottom:10px;
 
 .upload_pdf{
   width: 400px;
-  padding: 10px;
+  padding: 0 10px;
   margin: 0 auto;
+  position: relative;
+  left: -50%;
+  float: left;
 }
 
 /* ############### tag attribute  ############### */
