--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -118,7 +118,7 @@ background: #efefef;
   border-style: solid;
   border-width: 5px;
   border-color: #ff6699;
-  background: #CCC; 
+  background: #F2F2F2;
   display: inline-block; 
   text-align: center;
   position: relative;
@@ -373,6 +373,10 @@ padding-bottom:10px;
 #rmimg{
   width: 120px;
   margin-left: 25px;
+}
+
+#upload_form{
+  background: #F2F2F2;
 }
 
 #upload_form input[type="text"],
