--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -51,7 +51,7 @@ paddin-top: 10px;
 #frame_admedit{}
 #frame_edit, #frame_admedit {
   position:relative;
-  left:-50%;
+  left:-53%;
   float:left;
   color: #000;
   width: 400px;
@@ -136,7 +136,7 @@ background: #efefef;
   display: inline-block; 
   text-align: center;
   position: relative;
-  left: -50%;
+  left: -53%;
   float: left;
 }
 
@@ -472,7 +472,7 @@ padding-bottom:10px;
   padding: 0 10px;
   margin: 0 auto;
   position: relative;
-  left: -50%;
+  left: -53%;
   float: left;
 }
 
@@ -695,6 +695,7 @@ nav ul li a{
   z-index:2;
   text-decoration:none;
   white-space:nowrap;
+
 }
 nav ul ul{
   position:absolute;
@@ -705,6 +706,7 @@ nav ul ul li{
   float:none;
   position:relative;
   z-index: 10;
+  text-align: center:
 }
 nav ul ul li:last-child{
   border-radius:0 0 5px 5px !important; 
