--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -103,6 +103,7 @@ background: #efefef;
 	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
 	border-radius: 10px;  
+	width: 170px; 
 	margin-top: 10px;
 	margin-left: 10px;
 	float: left;
