--- a/public_html/admin/css/opening.css
+++ b/public_html/admin/css/opening.css
@@ -13,9 +13,35 @@ border-style: solid;
 border-width: 5px;
 border-color: #ff6699;
 padding-top: 10px;
+padding-bottom: 10px;
+margin-top: 5px;
+margin-bottom: 10px;
 overflow: auto;
 width: 430px;
+}
+.background1{
+background: red;
+
+}
+
+.background0 {
 background: #ccc;
+}
+
+#openingHours{
+float: left;
+padding: 10px;
+
+}
+
+#closingHours{
+float: left;
+padding: 10px;
+}
+
+#openUntill{
+float: left;
+
 }
 
 #postOpeninghours {
