--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -6,7 +6,7 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
 #F2F2F2
 */
 
-.Skickad{
+.Oläst{
 background-color: #FC5E5E;
 font-weight: bold;
 }
