--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -478,6 +478,27 @@ text-align: left;
   margin-top: 20px;
 }
 
+.tmsg {
+    border-collapse:collapse;
+    border-spacing:0;
+    border-color:#ccc;
+}
+
+.tmsg td {
+    padding:10px 5px;
+    border-style:solid;
+    border-width:1px;
+    overflow:hidden;
+    word-break:normal;
+    border-color:#ccc;
+    color:#333;
+    background-color:#fff;
+}
+
+.tmsg .tnb {
+    border-style:none;
+}
+
 .upload_pdf{
   width: 400px;
   padding: 0 10px;
