--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -47,24 +47,30 @@ padding-top: 10px;
   text-align: center;
   padding:25px 0px;
 }
-#frame_edit{}
-#frame_admedit{}
-#frame_edit, #frame_admedit {
-  position:relative;
-  left:-53%;
-  float:left;
-  color: #000;
+#frame_edit{ position:relative;
   width: 400px;
-  height: 350px;
-  padding: 25px;
-  margin-top: 50px;
+padding: 0 10px;
+margin: 0 auto;
+float: left;
   -moz-box-shadow: 0px 0px 10px #888;
   -o-box-shadow: 0px 0px 10px #888;
   -webkit-box-shadow: 0px 0px 10px #888;
   -moz-border-radius: 10px 10px 10px 10px;
   -o-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-}
+  -webkit-border-radius: 10px 10px 10px 10px;}
+#frame_admedit{ position:relative;
+width: 400px;
+min-height: 400px;
+height: 100%;
+text-align: center;
+margin-top: 5px;
+display: inline-block;  
+  -moz-box-shadow: 0px 0px 10px #888;
+  -o-box-shadow: 0px 0px 10px #888;
+  -webkit-box-shadow: 0px 0px 10px #888;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -o-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;}
 
 #admchange{
   display: inline-block;
@@ -496,6 +502,7 @@ text-align: left;
     border-color: #ccc;
     color: #333;
     background-color: #fff;
+	text-align: center;
 }
 
 .tmsg .tnb {
