--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -47,30 +47,47 @@ padding-top: 10px;
   text-align: center;
   padding:25px 0px;
 }
-#frame_edit{ position:relative;
-  width: 400px;
-padding: 0 10px;
-margin: 0 auto;
+#frame_edit {
+padding-top: 10px;
+color: black;
+background: #F0F0F0;
 float: left;
-  -moz-box-shadow: 0px 0px 10px #888;
-  -o-box-shadow: 0px 0px 10px #888;
-  -webkit-box-shadow: 0px 0px 10px #888;
-  -moz-border-radius: 10px 10px 10px 10px;
-  -o-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;}
-#frame_admedit{ position:relative;
 width: 400px;
 min-height: 400px;
 height: 100%;
 text-align: center;
-margin-top: 5px;
 display: inline-block;  
   -moz-box-shadow: 0px 0px 10px #888;
   -o-box-shadow: 0px 0px 10px #888;
   -webkit-box-shadow: 0px 0px 10px #888;
   -moz-border-radius: 10px 10px 10px 10px;
   -o-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;}
+  -webkit-border-radius: 10px 10px 10px 10px;
+}
+#frame_admedit{
+padding-top: 10px;
+color: black;
+background: #F0F0F0;
+width: 400px;
+min-height: 400px;
+height: 100%;
+text-align: center;
+display: inline-block;  
+  -moz-box-shadow: 0px 0px 10px #888;
+  -o-box-shadow: 0px 0px 10px #888;
+  -webkit-box-shadow: 0px 0px 10px #888;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -o-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+}
+
+#frame_admedit  input{
+margin: 5px 0;
+}
+#frame_edit  input{
+margin: 5px 0;
+}
+
 
 #admchange{
   display: inline-block;
