--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -162,18 +162,31 @@ background: #efefef;
   display: inline-block;
 }
 
+#invoicecontainer {
+width: 90%;
+margin: 0 5%;
+margin-top: 10px;
+margin-bottom: 10px;
+overflow: visibility;
+}
+
+#invoicecontainer checkbox{
+margin-left: 5px;
+float: right;
+}
+
+
 #invoicelistframe { 
 background: #efefef; 
 	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
 	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
 	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
 	box-shadow: 0px 0px 5px rgba(0,0,0,1);
-	width: 95%;
-	margin-top: 20px;
-	text-align: center;
-	margin-right: 10px;
-	float: right;
+	width: 90%;	
+	text-align: center;	
+	float: left;
 	font: 18px Arial,sans-serif;
+	display: inline-block;
 }
 
 #preview{
