--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -142,9 +142,7 @@ background: #efefef;
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
 	border-radius: 10px;  	
 	color: #EA005A;
-	margin-top: 10px;
-	margin-right: 10px;
-	float: right;
+	margin-top: 10px;	
 	font: 18px Arial,sans-serif;
 	border: hidden;
 }
@@ -167,12 +165,14 @@ width: 90%;
 margin: 0 5%;
 margin-top: 10px;
 margin-bottom: 10px;
-overflow: visibility;
+height: 21px;
 }
 
-#invoicecontainer checkbox{
-margin-left: 5px;
-float: right;
+input[type="checkbox"] {
+ -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
 }
 
 
@@ -187,6 +187,7 @@ background: #efefef;
 	float: left;
 	font: 18px Arial,sans-serif;
 	display: inline-block;
+	margin-right: 10px;
 }
 
 #preview{
