--- a/public_html/admin/css/index.css
+++ b/public_html/admin/css/index.css
@@ -524,6 +524,8 @@ text-align: left;
     border-color: rgb(234, 0, 90);
     border-collapse: collapse;
     background-color: white;
+    margin-left:auto !important;
+    margin-right:auto !important;
 }
 
 .tmsg td {
