tagit bort kommentarer och fixat mobil

--- a/public_html/css/footer.css
+++ b/public_html/css/footer.css
@@ -18,7 +18,7 @@ color: white;
 }
 #footer-wrapper  li:before {
     content: "• ";
-    color: pink; /* or whatever color you prefer */
+    color: pink; 
 }
 
 #left-box{
